--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -5,6 +5,10 @@
   font-display: swap;
   src: url("../font/pretendard/PretendardVariable.woff2") format("woff2-variations");
 }
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-width: 87.5rem;
   font-family: "Pretendard Variable", sans-serif;
@@ -169,6 +173,16 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.icon-heart {
+  width: 1.125rem;
+  height: 1.125rem;
+}
+
+.cart-item .icon-heart {
+  width: 1rem !important;
+  height: 1rem !important;
+}
+
 .qty-box {
   flex: 1;
   display: flex;
@@ -221,6 +235,29 @@ body {
 }
 .qty-box input:focus {
   outline: 2px solid #444444;
+}
+
+.btn-icon {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 1px solid #aaaaaa;
+  border-radius: 0.25rem;
+  background: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+.btn-icon:hover {
+  background-color: #f4f4f4;
+}
+.btn-icon.active {
+  border-color: #444444;
+}
+
+.custom-checkbox-ui svg {
+  vertical-align: top;
 }
 
 .badge-order-red {
@@ -449,13 +486,12 @@ body {
   text-underline-offset: 0.125rem;
 }
 .product-card .card-info .product-name {
-  font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
   font-size: 1.25rem;
   font-weight: 600;
   color: #444444;
   margin-bottom: 0.25rem;
   line-height: 1.5;
-  letter-spacing: -0.0625rem;
+  letter-spacing: 0.025rem;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
