- custom-checkbox 공통 스타일 마크업 선택

--- a/assets/styles/base/_common.scss
+++ b/assets/styles/base/_common.scss
@@ -286,8 +286,9 @@ body {
     }
 }
 
-.custom-checkbox-ui {
-    svg {
-        vertical-align: top;
-    }
+custom-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
