1. 모바일 메인 2. 검색창 3. 폴더구조 정리

--- a/assets/styles/abstracts/_functions.scss
+++ b/assets/styles/abstracts/_functions.scss
@@ -1,8 +1,8 @@
-// Functions
+// 함수
 // -----------------------------------------------------------------------------
 
-// Unit Conversion
-// Usage: rem(16) -> 1rem
+// px to rem
+// rem(16) -> 1rem
 @function rem($px) {
     @return #{calc($px / 16)}rem;
 }
