--- a/assets/styles/pc/pages/_cart.scss
+++ b/assets/styles/pc/pages/_cart.scss
@@ -350,6 +350,12 @@
                 &.tag-green {
                     color: $system-success;
                 }
+
+            }
+
+            svg {
+                width: rem(14) !important;
+                height: rem(14) !important;
             }
         }
     }
